--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
 
 
 
-<meta property="article:published_time" content="2019-10-27 03:16:00 &#43;0800 &#43;0800" />
+<meta property="article:published_time" content="2019-10-27 03:16:00 &#43;0800 CST" />
 
 
 <link rel="alternate" type="application/rss+xml" href="https://likego.club/about/index.xml" title="Like go" />
@@ -114,7 +114,7 @@
                 <footer class="footer">
     <div class="footer__inner">
         <div class="footer__content">
-            <span>&copy; 2019</span>
+            <span>&copy; 2020</span>
             
                 <span><a href="https://likego.club/">YongKang.H</a></span>
             
